fixed content overflow scrolling; added max-width to dtable cells

--- a/webroot/css/backend.css
+++ b/webroot/css/backend.css
@@ -904,6 +904,10 @@ nav.toolbar > ul {
   display: table-cell;
   vertical-align: middle;
   padding: 5px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 250px;
 }
 .dtable-head-cell {
   font-weight: 600;
