--- a/webroot/less/backend/dtable.less
+++ b/webroot/less/backend/dtable.less
@@ -33,6 +33,10 @@
   display: table-cell;
   vertical-align: middle;
   padding: @dtable-cell-padding;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 250px
 }
 
 .dtable-head-cell {
