--- a/webroot/less/layout/default.less
+++ b/webroot/less/layout/default.less
@@ -13,6 +13,10 @@ body.be-sidebar  {
   }
 }
 
+main {
+  overflow-x: scroll;
+}
+
 #page {
 }
 
